Fixed friend bar overlap on map... but Firefox with scrollbar now broken

--- a/friends-map.css
+++ b/friends-map.css
@@ -42,7 +42,7 @@ header h1 {
     overflow-y:scroll;
     top:0;
     right:0;
-    width:175px;
+    width:150px;
     height:100%;
     z-index:2;
     padding:0;
